added communication feature between nodes

--- a/server_deploy/Dockerfile
+++ b/server_deploy/Dockerfile
@@ -4,4 +4,5 @@ WORKDIR /running
 COPY . .
 RUN pip3 install --upgrade pip
 RUN pip3 install --no-cache-dir -r requirements.txt
-CMD ["sh", "-c", "python3 main.py & python3 stress_cpu.py 30"]
+ENV NODE_NAME="edge-node"
+CMD ["sh", "-c", "python3 main.py & python3 post.py & python3 stress_cpu.py"]
